--- a/src/main/resources/com/andre/dojo/invoicemanager/history-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/history-view.fxml
@@ -26,7 +26,7 @@
                     <Font size="15.0" />
                 </font>
             </Label>
-            <Label fx:id="tombolHistory" alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Invoice History">
+            <Label fx:id="tombolHistory" alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Export History">
                 <font>
                     <Font size="15.0" />
                 </font>
