--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data-invoice.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data-invoice.fxml
@@ -98,12 +98,17 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="tombolCustomer" alignment="CENTER" layoutX="145.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Customer">
+            <Label fx:id="tombolCustomer" alignment="CENTER" layoutX="296.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Customer">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="300.0" layoutY="14.0" prefHeight="37.0" prefWidth="113.0" styleClass="top-label-active" text="Invoice">
+            <Label alignment="CENTER" layoutX="450.0" layoutY="14.0" prefHeight="37.0" prefWidth="113.0" styleClass="top-label-active" text="Invoice">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="tombolCode" alignment="CENTER" layoutX="141.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Code &amp; Bank">
                <font>
                   <Font size="15.0" />
                </font>
