--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
@@ -46,7 +46,7 @@
                         </Label>
                         <ImageView fx:id="logoImage" fitHeight="150.0" fitWidth="200.0" layoutX="135.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../../../../../invoiceManagerSource/logo/logo.png" />
+                              <Image url="@logo/seigan.jpg" />
                            </image>
                         </ImageView>
                         <Label layoutX="153.0" layoutY="14.0" text="Organization">
