--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data-invoice.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data-invoice.fxml
@@ -84,7 +84,7 @@
                </children>
             </Pane>
             <ChoiceBox fx:id="custName" layoutX="17.0" layoutY="375.0" prefHeight="36.0" prefWidth="457.0" />
-            <Label layoutX="498.0" layoutY="351.0" text="Letter Code">
+            <Label fx:id="labelLetter" layoutX="498.0" layoutY="351.0" text="Letter Code">
                <font>
                   <Font size="15.0" />
                </font>
