--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data-invoice.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data-invoice.fxml
@@ -28,7 +28,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="17.0" layoutY="419.0" text="Invoice Name :">
+            <Label layoutX="17.0" layoutY="419.0" text="Invoice Mark Text :">
                <font>
                   <Font size="15.0" />
                </font>
