--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
@@ -44,11 +44,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <ImageView fx:id="logoImage" fitHeight="150.0" fitWidth="200.0" layoutX="135.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@logo/seigan.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="logoImage" fitHeight="150.0" fitWidth="146.0" layoutX="137.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
                         <Label layoutX="153.0" layoutY="14.0" text="Organization">
                            <font>
                               <Font name="System Bold" size="18.0" />
@@ -56,6 +52,12 @@
                         </Label>
                         <TextArea fx:id="desc" layoutX="13.0" layoutY="439.0" prefHeight="87.0" prefWidth="424.0" styleClass="field-add-item" />
                         <Separator layoutX="-5.0" layoutY="49.0" prefHeight="4.0" prefWidth="464.0" />
+                        <Label layoutX="13.0" layoutY="527.0" text="Code Organization on Letter :">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="orgLetter" layoutX="13.0" layoutY="549.0" prefHeight="25.0" prefWidth="424.0" styleClass="field-add-item" />
                      </children>
                   </AnchorPane>
                 <AnchorPane prefHeight="611.0" prefWidth="479.0">
@@ -73,11 +75,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <ImageView fx:id="signatureImage" fitHeight="150.0" fitWidth="200.0" layoutX="184.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../../../../../../../invoiceManagerSource/logo/signature.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="signatureImage" fitHeight="150.0" fitWidth="200.0" layoutX="166.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true" />
                         <Pane fx:id="save" layoutX="20.0" layoutY="555.0" prefHeight="42.0" prefWidth="87.0" styleClass="tombol-primary">
                            <children>
                               <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
